--- a/public/index.html
+++ b/public/index.html
@@ -6,33 +6,55 @@
   <title>Stations-Sprint</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <style>
-    /* Smooth screen transitions */
     .screen { display: none; }
     .screen.active { display: flex; }
 
-    /* Task card pulse animation when new task arrives */
-    @keyframes taskIn {
-      from { opacity: 0; transform: translateY(-8px); }
-      to   { opacity: 1; transform: translateY(0); }
+    @keyframes urgentPulse {
+      0%, 100% { box-shadow: 0 0 0 0 rgba(251,146,60,0.5); }
+      50%       { box-shadow: 0 0 0 8px rgba(251,146,60,0); }
     }
-    .task-card { animation: taskIn 0.2s ease-out; }
+    @keyframes criticalPulse {
+      0%, 100% { box-shadow: 0 0 0 0 rgba(239,68,68,0.7); }
+      50%       { box-shadow: 0 0 0 10px rgba(239,68,68,0); }
+    }
+    .pulse-urgent   { animation: urgentPulse   1.4s ease-in-out infinite; }
+    .pulse-critical { animation: criticalPulse 0.8s ease-in-out infinite; }
 
-    /* Countdown bar */
-    @keyframes shrink {
-      from { width: 100%; }
-      to   { width: 0%; }
+    @keyframes streakPop {
+      0%   { transform: scale(1); }
+      50%  { transform: scale(1.4); }
+      100% { transform: scale(1); }
     }
+    .streak-pop { animation: streakPop 0.3s ease-out; }
+
+    @keyframes toastIn {
+      from { opacity: 0; transform: translateY(20px) translateX(-50%); }
+      to   { opacity: 1; transform: translateY(0)    translateX(-50%); }
+    }
+    .toast { animation: toastIn 0.25s ease-out forwards; }
+
+    @keyframes modalIn {
+      from { transform: translateY(100%); }
+      to   { transform: translateY(0); }
+    }
+    .modal-panel { animation: modalIn 0.25s ease-out; }
+
+    .ttl-bar { transition: width 0.5s linear; }
+
+    .vital-warn { color: #f97316; }
+    .vital-crit { color: #ef4444; }
   </style>
 </head>
-<body class="bg-slate-900 text-white min-h-screen">
+<body class="bg-slate-900 text-white min-h-screen overflow-x-hidden">
 
   <!-- ═══════════════════════════════════════════
        LOBBY SCREEN
   ════════════════════════════════════════════ -->
   <div id="screen-lobby" class="screen active flex-col items-center justify-center min-h-screen p-6 gap-6">
     <div class="text-center">
-      <h1 class="text-4xl font-extrabold text-emerald-400 tracking-tight">🏥 Stations-Sprint</h1>
-      <p class="mt-2 text-slate-400 text-sm">Reagiere schnell — handle richtig!</p>
+      <div class="text-5xl mb-2">🏥</div>
+      <h1 class="text-4xl font-extrabold text-emerald-400 tracking-tight">Stations-Sprint</h1>
+      <p class="mt-2 text-slate-400 text-sm">Eine Station. Ein Team. Alle zusammen.</p>
     </div>
 
     <div class="w-full max-w-sm flex flex-col gap-4">
@@ -41,6 +63,7 @@
         type="text"
         maxlength="32"
         placeholder="Dein Name …"
+        autocomplete="off"
         class="w-full rounded-xl px-4 py-4 text-lg bg-slate-800 border border-slate-600 text-white placeholder-slate-500 focus:outline-none focus:border-emerald-400"
       />
       <button
@@ -48,15 +71,14 @@
         class="w-full rounded-xl bg-emerald-500 hover:bg-emerald-400 active:scale-95 transition text-white font-bold text-xl py-5"
         style="min-height:80px"
       >
-        Anmelden &amp; Spiel starten →
+        Dienst antreten →
       </button>
     </div>
 
-    <!-- Lobby leaderboard preview -->
     <div class="w-full max-w-sm">
-      <h2 class="text-lg font-semibold text-slate-300 mb-2 text-center">🏆 Bestenliste</h2>
+      <h2 class="text-base font-semibold text-slate-300 mb-2 text-center">🏆 Bestenliste</h2>
       <div id="lobby-leaderboard" class="rounded-xl bg-slate-800 divide-y divide-slate-700 overflow-hidden text-sm">
-        <p class="text-center text-slate-500 py-4">Wird geladen …</p>
+        <p class="text-center text-slate-500 py-4 text-sm">Wird geladen …</p>
       </div>
     </div>
   </div>
@@ -66,61 +88,79 @@
   ════════════════════════════════════════════ -->
   <div id="screen-game" class="screen flex-col min-h-screen">
 
-    <!-- Top HUD -->
-    <div class="flex items-center justify-between bg-slate-800 px-4 py-3 border-b border-slate-700">
-      <div class="flex flex-col items-center">
-        <span class="text-xs text-slate-400 uppercase tracking-widest">Zeit</span>
-        <span id="hud-timer" class="text-3xl font-mono font-bold text-emerald-400">60</span>
+    <!-- Top HUD bar -->
+    <div class="bg-slate-800 border-b border-slate-700 px-3 py-2 flex items-center justify-between gap-2 flex-wrap">
+      <div class="flex flex-col items-center min-w-[64px]">
+        <span class="text-[10px] text-slate-400 uppercase tracking-widest">Team</span>
+        <span id="hud-team-score" class="text-xl font-mono font-bold text-emerald-400">0</span>
       </div>
-      <div class="text-center">
-        <span id="hud-name" class="text-lg font-semibold text-white truncate max-w-[140px] block"></span>
-        <span class="text-xs text-slate-400">Stationsschwester / -pfleger</span>
+      <div class="flex flex-col items-center text-center flex-1">
+        <span class="text-xs font-bold text-white">🏥 Station Katharinen</span>
+        <span id="hud-players" class="text-[11px] text-slate-400">0 Pflegekräfte</span>
       </div>
-      <div class="flex flex-col items-center">
-        <span class="text-xs text-slate-400 uppercase tracking-widest">Punkte</span>
-        <span id="hud-score" class="text-3xl font-mono font-bold text-yellow-400">0</span>
+      <div class="flex flex-col items-center min-w-[64px]">
+        <span class="text-[10px] text-slate-400 uppercase tracking-widest">Ich</span>
+        <div class="flex items-center gap-1">
+          <span id="hud-my-score" class="text-xl font-mono font-bold text-yellow-400">0</span>
+          <span id="hud-streak" class="hidden text-xs bg-orange-500 rounded-full px-1.5 py-0.5 font-bold leading-none">×0</span>
+        </div>
       </div>
     </div>
 
-    <!-- Tasks area -->
-    <div class="flex-1 p-4 flex flex-col gap-3 overflow-y-auto" id="tasks-container">
-      <p id="tasks-empty" class="text-slate-500 text-center mt-8">Warte auf Aufgaben …</p>
-    </div>
+    <!-- Online players strip -->
+    <div id="players-strip" class="bg-slate-800/60 border-b border-slate-700/50 px-3 py-1.5 flex gap-2 overflow-x-auto text-xs text-slate-300 items-center min-h-[32px]"></div>
 
-    <!-- Live leaderboard (collapsed on mobile, visible on wider screens) -->
-    <div class="border-t border-slate-700 bg-slate-800 p-4">
-      <h3 class="text-xs uppercase tracking-widest text-slate-400 mb-2 text-center">Live-Bestenliste</h3>
-      <div id="game-leaderboard" class="text-sm divide-y divide-slate-700"></div>
+    <!-- Floor plan: 2×4 room grid -->
+    <div class="flex-1 p-3 grid grid-cols-2 gap-3 content-start overflow-y-auto" id="ward-grid"></div>
+
+    <!-- Leaderboard (compact, at bottom) -->
+    <div class="border-t border-slate-700 bg-slate-800 px-4 py-3">
+      <p class="text-[10px] uppercase tracking-widest text-slate-500 text-center mb-1.5">🏆 Bestenliste</p>
+      <div id="game-leaderboard" class="flex gap-3 overflow-x-auto pb-1 justify-center"></div>
     </div>
   </div>
 
   <!-- ═══════════════════════════════════════════
-       GAME OVER SCREEN
+       TASK MODAL  (bottom sheet)
   ════════════════════════════════════════════ -->
-  <div id="screen-gameover" class="screen flex-col items-center justify-center min-h-screen p-6 gap-6">
-    <div class="text-center">
-      <div class="text-6xl mb-2">🎉</div>
-      <h1 class="text-3xl font-extrabold text-white">Runde beendet!</h1>
-      <p class="mt-2 text-slate-400">Dein Ergebnis:</p>
-      <p id="final-score" class="text-6xl font-mono font-bold text-yellow-400 mt-2">0</p>
-      <p class="text-slate-400 text-sm">Punkte</p>
-    </div>
+  <div id="task-modal" class="fixed inset-0 z-50 hidden flex-col justify-end">
+    <div class="absolute inset-0 bg-black/60" id="modal-backdrop"></div>
+    <div class="modal-panel relative bg-slate-800 rounded-t-2xl p-5 max-h-[85vh] overflow-y-auto">
 
-    <button
-      id="btn-play-again"
-      class="w-full max-w-sm rounded-xl bg-emerald-500 hover:bg-emerald-400 active:scale-95 transition text-white font-bold text-xl py-5"
-      style="min-height:80px"
-    >
-      Nochmal spielen →
-    </button>
+      <!-- Header -->
+      <div class="flex items-start justify-between mb-3">
+        <div>
+          <p id="modal-patient" class="text-slate-400 text-sm"></p>
+          <h2 id="modal-task-label" class="text-xl font-bold text-white mt-0.5"></h2>
+          <span id="modal-urgency-badge" class="inline-block mt-1 text-xs font-semibold px-2 py-0.5 rounded-full"></span>
+        </div>
+        <button id="modal-close-btn" class="text-slate-400 hover:text-white text-3xl leading-none ml-4 -mt-1">×</button>
+      </div>
 
-    <div class="w-full max-w-sm">
-      <h2 class="text-lg font-semibold text-slate-300 mb-2 text-center">🏆 Bestenliste</h2>
-      <div id="gameover-leaderboard" class="rounded-xl bg-slate-800 divide-y divide-slate-700 overflow-hidden text-sm"></div>
+      <!-- TTL bar -->
+      <div class="w-full bg-slate-700 rounded-full h-1.5 mb-4">
+        <div id="modal-ttl-bar" class="ttl-bar bg-emerald-400 h-1.5 rounded-full" style="width:100%"></div>
+      </div>
+
+      <!-- Vitals readout -->
+      <div id="modal-vitals" class="grid grid-cols-2 gap-2 text-sm mb-4 bg-slate-900/60 rounded-xl p-3"></div>
+
+      <!-- Hint -->
+      <p id="modal-hint" class="text-slate-300 text-sm mb-4 italic"></p>
+
+      <p class="text-slate-400 text-xs mb-3 font-semibold uppercase tracking-wider">Was ist die richtige Maßnahme?</p>
+
+      <!-- 6 action buttons (3×2 grid) -->
+      <div class="grid grid-cols-3 gap-2" id="modal-actions"></div>
     </div>
   </div>
 
+  <!-- Toast -->
+  <div id="toast" class="fixed bottom-6 left-1/2 z-[100] hidden pointer-events-none" style="-webkit-transform:translateX(-50%);transform:translateX(-50%)">
+    <div id="toast-inner" class="toast bg-orange-500 text-white font-bold px-5 py-3 rounded-xl shadow-xl text-sm text-center whitespace-nowrap"></div>
+  </div>
+
   <script src="/socket.io/socket.io.js"></script>
-  <script src="game.js"></script>
+  <script src="game.js?v=5"></script>
 </body>
 </html>
